--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "nodemailer": "^6.10.1",
     "redis": "^4.7.0",
     "stripe": "^17.5.0",
     "uuid": "^10.0.0",
