--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@sendgrid/mail": "^8.1.3",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "better-auth": "^1.2.8",
     "chalk": "^5.4.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
