fix: update project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vlon-ai-api",
+  "name": "esales-ecommerce-api",
   "version": "1.0.0",
   "description": "Node api for Vlon Ai",
   "main": "index.js",
