--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "http-status": "^1.7.4",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "mailgun.js": "^12.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.7.1",
     "morgan": "^1.10.0",
